# resume_builder

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
resume_builder/: agent.py  constants.py  main.py  tools.py  utils.py
resume_builder/agents/: agent.py  agent_as_tools.py  orchestrator.py
resume_builder/mcp_client/: duckduckgo_mcp_client.py
resume_builder/stream/: handlers.py  stream.py
resume_builder/system_prompts/: __init__.py
